test/syntaxerrors/TestDetectMissingAllSemicolons.jdc
println("hello world!")

int i = 0